--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -13,7 +13,6 @@
 # limitations under the License.
 
 name: 'test_guardian_plan'
-
 on:
   # pull_request_target: # removed pull_request_target to allow for testing of guardian within the guardian repository
   pull_request:
@@ -23,23 +22,19 @@ on:
       - 'reopened'
     branches:
       - 'main'
-
 permissions:
   contents: 'read'
   id-token: 'write'
   pull-requests: 'write'
-
 # only one plan, per pr should run at a time
 concurrency:
   group: '${{ github.workflow }}-${{ github.event.pull_request.number }}-${{ github.head_ref || github.ref }}'
-
 env:
   REPO_OWNER: '${{ github.repository_owner }}'
   REPO_NAME: '${{ github.event.repository.name }}'
   PR_NUMBER: '${{ github.event.number }}'
   # GUARDIAN_LOG_MODE: 'development'
   # GUARDIAN_LOG_LEVEL: 'debug'
-
 jobs:
   init:
     runs-on: 'ubuntu-latest'
@@ -50,16 +45,13 @@ jobs:
         uses: 'actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9' # ratchet:actions/checkout@v3
         with:
           fetch-depth: 0 # get everything so we can use git diff
-
       - name: 'Setup Go'
         uses: 'actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568' # ratchet:actions/setup-go@v3
         with:
           go-version: '1.20'
-
       - name: 'Install Guardian CLI'
         shell: 'bash'
         run: 'go install github.com/abcxyz/guardian/cmd/guardian@${{ github.event.pull_request.head.sha }}'
-
       - name: 'Guardian Plan Init'
         id: 'init'
         env:
@@ -81,7 +73,6 @@ jobs:
           echo "Guardian Dirs: ${DIRS}"
 
           echo "directories=${DIRS}" >> $GITHUB_OUTPUT
-
   plan:
     if: |
       needs.init.outputs.directories != '[]'
@@ -97,24 +88,20 @@ jobs:
         uses: 'actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9' # ratchet:actions/checkout@v3
         with:
           ref: '${{ github.event.pull_request.head.ref }}'
-
       - name: 'Setup Go'
         uses: 'actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568' # ratchet:actions/setup-go@v3
         with:
           go-version: '1.20'
-
       - name: 'Install Guardian CLI'
         shell: 'bash'
         run: 'go install github.com/abcxyz/guardian/cmd/guardian@${{ github.event.pull_request.head.sha }}'
-
       - name: 'Setup Terraform'
-        uses: 'abcxyz/secure-setup-terraform@78e3f2fdfb7ebf59ce42141f6dd93bdd65bf04ed' # ratchet:abcxyz/secure-setup-terraform@v0.2.5
+        uses: 'abcxyz/secure-setup-terraform@eba2f9ad6a23da76d4e5996fe1c2850cc8ca92d9' # ratchet:abcxyz/secure-setup-terraform@main
         with:
           terraform_version: '1.3.6'
           terraform_module_location: '${{ matrix.working_directory }}'
           terraform_lockfile_location: '${{ matrix.working_directory }}'
           terraform_wrapper: false
-
       - name: 'Mint Token'
         id: 'mint-token'
         uses: 'abcxyz/github-token-minter/.github/actions/mint-token@c6ea9b91e3e1df75a6e86dad8e5b0a0a45b42fec'
@@ -124,17 +111,14 @@ jobs:
           service_audience: '${{ vars.TOKEN_MINTER_SERVICE_AUDIENCE }}'
           service_url: '${{ vars.TOKEN_MINTER_SERVICE_URL }}'
           requested_permissions: '{"repositories":["*"],"permissions":{"contents":"read"}}'
-
       - name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@35b0e87d162680511bf346c299f71c9c5c379033' # ratchet:google-github-actions/auth@v1
         with:
           workload_identity_provider: '${{ vars.GUARDIAN_WIF_PROVIDER }}'
           service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
-
       - name: 'Git Config'
         run: |-
           git config --global url."https://guardian-bot:${{ steps.mint-token.outputs.token }}@github.com".insteadOf "https://github.com"
-
       - name: 'Guardian Plan'
         env:
           GITHUB_TOKEN: '${{ github.token }}'
@@ -147,7 +131,6 @@ jobs:
             -github-repo="${REPO_NAME}" \
             -pull-request-number="${PR_NUMBER}" \
             "${WORKING_DIRECTORY}"
-
   plan_success:
     if: '${{ always() }}'
     runs-on: 'ubuntu-latest'
@@ -157,7 +140,6 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9' # ratchet:actions/checkout@v3
-
       - name: 'Guardian Post Plan Status'
         uses: './.github/actions/plan-status'
         with:
