--- a/.github/workflows/test-admin.yml
+++ b/.github/workflows/test-admin.yml
@@ -14,6 +14,7 @@
 
 name: 'test_guardian_admin'
 run-name: 'test_guardian_admin - [${{ inputs.command }}] [${{ inputs.directories }}] [${{ inputs.terraform_init }}]'
+
 on:
   workflow_dispatch:
     inputs:
@@ -30,13 +31,20 @@ on:
           - 'true'
           - 'false'
         default: 'true'
+
 permissions:
   contents: 'read'
   id-token: 'write'
   pull-requests: 'read'
+
 # only one admin should run at a time
 concurrency:
   group: '${{ github.workflow }}'
+
+env:
+  GUARDIAN_WIF_PROVIDER: 'projects/1098665030124/locations/global/workloadIdentityPools/guardian-automation/providers/guardian-ci-i'
+  GUARDIAN_WIF_SERVICE_ACCOUNT: 'guardian-automation-bot@ghg-guardian-ci-i-6ad437.iam.gserviceaccount.com'
+
 jobs:
   init:
     runs-on: 'ubuntu-latest'
@@ -44,13 +52,15 @@ jobs:
       directories: '${{ steps.dirs.outputs.directories }}'
     steps:
       - name: 'Checkout'
-        uses: 'actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9' # ratchet:actions/checkout@v3
+        uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
+
       - name: 'Guardian Directories'
         id: 'dirs'
         uses: './.github/actions/directories'
         with:
           terraform_directory: 'terraform'
           directories: '${{ inputs.directories }}'
+
   admin:
     if: |
       needs.init.outputs.directories != '[]'
@@ -63,7 +73,8 @@ jobs:
         working_directory: '${{ fromJSON(needs.init.outputs.directories) }}'
     steps:
       - name: 'Checkout'
-        uses: 'actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9' # ratchet:actions/checkout@v3
+        uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
+
       - name: 'Mint Token'
         id: 'mint-token'
         uses: 'abcxyz/github-token-minter/.github/actions/mint-token@c6ea9b91e3e1df75a6e86dad8e5b0a0a45b42fec'
@@ -73,14 +84,17 @@ jobs:
           service_audience: '${{ vars.TOKEN_MINTER_SERVICE_AUDIENCE }}'
           service_url: '${{ vars.TOKEN_MINTER_SERVICE_URL }}'
           requested_permissions: '{"repositories":["*"],"permissions":{"contents":"read"}}'
+
       - name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@35b0e87d162680511bf346c299f71c9c5c379033' # ratchet:google-github-actions/auth@v1
         with:
-          workload_identity_provider: '${{ vars.GUARDIAN_WIF_PROVIDER }}'
-          service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
+          workload_identity_provider: '${{ env.GUARDIAN_WIF_PROVIDER }}'
+          service_account: '${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
+
       - name: 'Git Config'
         run: |-
           git config --global url."https://guardian-bot:${{ steps.mint-token.outputs.token }}@github.com".insteadOf "https://github.com"
+
       - name: 'Guardian Admin'
         uses: './.github/actions/admin'
         env:
