--- a/.github/workflows/test-apply.yml
+++ b/.github/workflows/test-apply.yml
@@ -13,17 +13,26 @@
 # limitations under the License.
 
 name: 'test_guardian_apply'
+
 on:
   push:
     branches:
       - 'main'
+
 permissions:
   contents: 'read'
   id-token: 'write'
   pull-requests: 'write'
+
 # only one apply should run at a time
 concurrency:
   group: '${{ github.workflow }}'
+
+env:
+  GUARDIAN_WIF_PROVIDER: 'projects/1098665030124/locations/global/workloadIdentityPools/guardian-automation/providers/guardian-ci-i'
+  GUARDIAN_WIF_SERVICE_ACCOUNT: 'guardian-automation-bot@ghg-guardian-ci-i-6ad437.iam.gserviceaccount.com'
+  GUARDIAN_BUCKET_NAME: 'guardian-ci-i-guardian-state-c79e1f4759'
+
 jobs:
   init:
     runs-on: 'ubuntu-latest'
@@ -31,15 +40,17 @@ jobs:
       directories: '${{ steps.dirs.outputs.directories }}'
     steps:
       - name: 'Checkout'
-        uses: 'actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9' # ratchet:actions/checkout@v3
+        uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
         with:
           fetch-depth: 2 # required to get diff between HEAD and HEAD-1
+
       - name: 'Guardian Directories'
         id: 'dirs'
         uses: './.github/actions/directories'
         with:
           terraform_directory: 'terraform'
           detect_apply_changes: 'true'
+
   apply:
     if: |
       needs.init.outputs.directories != '[]'
@@ -52,7 +63,8 @@ jobs:
         working_directory: '${{ fromJSON(needs.init.outputs.directories) }}'
     steps:
       - name: 'Checkout'
-        uses: 'actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9' # ratchet:actions/checkout@v3
+        uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
+
       - name: 'Mint Token'
         id: 'mint-token'
         uses: 'abcxyz/github-token-minter/.github/actions/mint-token@c6ea9b91e3e1df75a6e86dad8e5b0a0a45b42fec'
@@ -62,14 +74,17 @@ jobs:
           service_audience: '${{ vars.TOKEN_MINTER_SERVICE_AUDIENCE }}'
           service_url: '${{ vars.TOKEN_MINTER_SERVICE_URL }}'
           requested_permissions: '{"repositories":["*"],"permissions":{"contents":"read"}}'
+
       - name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@35b0e87d162680511bf346c299f71c9c5c379033' # ratchet:google-github-actions/auth@v1
         with:
-          workload_identity_provider: '${{ vars.GUARDIAN_WIF_PROVIDER }}'
-          service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
+          workload_identity_provider: '${{ env.GUARDIAN_WIF_PROVIDER }}'
+          service_account: '${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
+
       - name: 'Git Config'
         run: |-
           git config --global url."https://guardian-bot:${{ steps.mint-token.outputs.token }}@github.com".insteadOf "https://github.com"
+
       - name: 'Guardian Apply'
         id: 'apply'
         uses: './.github/actions/apply'
@@ -77,8 +92,9 @@ jobs:
           GITHUB_TOKEN: '${{ steps.mint-token.outputs.token }}'
         with:
           working_directory: '${{ matrix.working_directory }}'
-          bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
+          bucket_name: '${{ env.GUARDIAN_BUCKET_NAME }}'
           terraform_version: '1.3.6'
+
       - name: 'Print Apply Output'
         shell: 'bash'
         env:
