--- a/.github/workflows/test-iam-drift-detection.yml
+++ b/.github/workflows/test-iam-drift-detection.yml
@@ -19,19 +19,27 @@
 #   If drift, create issue
 
 name: 'test_guardian_detect_iam_drift'
+
 on:
   workflow_dispatch:
     inputs:
       organization_id:
         description: 'The ID of the GCP organization to detect IAM drift on.'
         required: true
+
 permissions:
   issues: 'write' # For creating issues.
   id-token: 'write'
   contents: 'read'
+
 # only one apply should run at a time
 concurrency:
   group: '${{ github.workflow }}'
+
+env:
+  GUARDIAN_WIF_PROVIDER: 'projects/1098665030124/locations/global/workloadIdentityPools/guardian-automation/providers/guardian-ci-i'
+  GUARDIAN_WIF_SERVICE_ACCOUNT: 'guardian-automation-bot@ghg-guardian-ci-i-6ad437.iam.gserviceaccount.com'
+
 jobs:
   # add detect drift job
   create_issue:
@@ -39,14 +47,16 @@ jobs:
     runs-on: 'ubuntu-latest'
     steps:
       - name: 'Checkout Guardian repo'
-        uses: 'actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9' # ratchet:actions/checkout@v3
+        uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
         with:
           path: '.guardian'
+
       - name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@35b0e87d162680511bf346c299f71c9c5c379033' # ratchet:google-github-actions/auth@v1
         with:
-          workload_identity_provider: '${{ vars.GUARDIAN_WIF_PROVIDER }}'
-          service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
+          workload_identity_provider: '${{ env.GUARDIAN_WIF_PROVIDER }}'
+          service_account: '${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
+
       - name: 'Guardian IAM Drift Detection'
         uses: './.github/actions/iam-drift-detection'
         env:
