--- a/abc.templates/workflows/spec.yaml
+++ b/abc.templates/workflows/spec.yaml
@@ -18,6 +18,9 @@ kind: 'Template'
 desc: 'Generate the Guardian workflows for the Google Cloud organization Terraform intrastructure repo.'
 
 inputs:
+  - name: 'terraform_directory'
+    desc: 'A sub-directory for all Terraform files.'
+    default: '.'
   - name: 'guardian_wif_provider'
     desc: 'The Google Cloud workload identity federation provider for Guardian'
   - name: 'guardian_service_account'
@@ -29,16 +32,8 @@ steps:
   - desc: 'Include required files and directories'
     action: 'include'
     params:
-      paths:
-        - 'guardian-admin.yml'
-        - 'guardian-apply.yml'
-        - 'guardian-plan.yml'
-        - 'guardian-run.yml'
-      as:
-        - '.github/workflows/guardian-admin.yml'
-        - '.github/workflows/guardian-apply.yml'
-        - '.github/workflows/guardian-plan.yml'
-        - '.github/workflows/guardian-run.yml'
+      paths: ['contents']
+      add_prefix: '.github/workflows'
 
   - desc: 'Replace variables'
     action: 'string_replace'
@@ -46,6 +41,8 @@ steps:
       paths:
         - '.github/workflows'
       replacements:
+        - to_replace: 'REPLACE_TERRAFORM_DIRECTORY'
+          with: '{{.terraform_directory}}'
         - to_replace: 'REPLACE_GUARDIAN_WIF_PROVIDER'
           with: '{{.guardian_wif_provider}}'
         - to_replace: 'REPLACE_GUARDIAN_WIF_SERVICE_ACCOUNT'
