--- a/abc.templates/workflows/spec.yaml
+++ b/abc.templates/workflows/spec.yaml
@@ -25,6 +25,8 @@ inputs:
     desc: 'The Google Cloud workload identity federation provider for Guardian'
   - name: 'guardian_service_account'
     desc: 'The Google Cloud service account for Guardian'
+    rules:
+      rule: 'gcp_matches_service_account(guardian_service_account)'
   - name: 'guardian_state_bucket'
     desc: 'The Google Cloud storage bucket for Guardian state'
 
