Add terraform_directory replacement string in workflows

--- a/abc.templates/workflows/contents/guardian-run.yml
+++ b/abc.templates/workflows/contents/guardian-run.yml
@@ -44,7 +44,7 @@ concurrency:
   group: '${{ github.workflow }}'
 
 env:
-  TERRAFORM_DIRECTORY: 'terraform'
+  TERRAFORM_DIRECTORY: 'REPLACE_TERRAFORM_DIRECTORY'
   GUARDIAN_WIF_PROVIDER: 'REPLACE_GUARDIAN_WIF_PROVIDER'
   GUARDIAN_WIF_SERVICE_ACCOUNT: 'REPLACE_GUARDIAN_WIF_SERVICE_ACCOUNT'
 
