--- a/abc.templates/workflows/contents/guardian-apply.yml
+++ b/abc.templates/workflows/contents/guardian-apply.yml
@@ -32,7 +32,7 @@ concurrency:
   group: '${{ github.workflow }}'
 
 env:
-  TERRAFORM_DIRECTORY: 'terraform'
+  TERRAFORM_DIRECTORY: 'REPLACE_TERRAFORM_DIRECTORY'
   GUARDIAN_WIF_PROVIDER: 'REPLACE_GUARDIAN_WIF_PROVIDER'
   GUARDIAN_WIF_SERVICE_ACCOUNT: 'REPLACE_GUARDIAN_WIF_SERVICE_ACCOUNT'
   GUARDIAN_BUCKET_NAME: 'REPLACE_GUARDIAN_STATE_BUCKET'
