--- a/abc.templates/workflows/contents/guardian-plan.yml
+++ b/abc.templates/workflows/contents/guardian-plan.yml
@@ -36,7 +36,7 @@ concurrency:
   group: '${{ github.workflow }}-${{ github.event.pull_request.number }}-${{ github.head_ref || github.ref }}'
 
 env:
-  TERRAFORM_DIRECTORY: 'terraform'
+  TERRAFORM_DIRECTORY: 'REPLACE_TERRAFORM_DIRECTORY'
   GUARDIAN_WIF_PROVIDER: 'REPLACE_GUARDIAN_WIF_PROVIDER'
   GUARDIAN_WIF_SERVICE_ACCOUNT: 'REPLACE_GUARDIAN_WIF_SERVICE_ACCOUNT'
   GUARDIAN_BUCKET_NAME: 'REPLACE_GUARDIAN_STATE_BUCKET'
