--- a/abc.templates/workflows/spec.yaml
+++ b/abc.templates/workflows/spec.yaml
@@ -19,8 +19,11 @@ desc: 'Generate the Guardian workflows for the Google Cloud organization Terrafo
 
 inputs:
   - name: 'terraform_directory'
-    desc: 'A sub-directory for all Terraform files.'
+    desc: 'A sub-directory for all Terraform files'
     default: '.'
+  - name: 'terraform_version'
+    desc: 'The terraform version to use with Guardian'
+    default: '1.5.4'
   - name: 'guardian_wif_provider'
     desc: 'The Google Cloud workload identity federation provider for Guardian'
   - name: 'guardian_service_account'
@@ -45,6 +48,8 @@ steps:
       replacements:
         - to_replace: 'REPLACE_TERRAFORM_DIRECTORY'
           with: '{{.terraform_directory}}'
+        - to_replace: 'REPLACE_TERRAFORM_VERSION'
+          with: '{{.terraform_version}}'
         - to_replace: 'REPLACE_GUARDIAN_WIF_PROVIDER'
           with: '{{.guardian_wif_provider}}'
         - to_replace: 'REPLACE_GUARDIAN_WIF_SERVICE_ACCOUNT'
