--- a/.github/workflows/test-admin.yml
+++ b/.github/workflows/test-admin.yml
@@ -41,16 +41,20 @@ permissions:
 concurrency:
   group: '${{ github.workflow }}'
 
-env:
-  GUARDIAN_WIF_PROVIDER: 'projects/1098665030124/locations/global/workloadIdentityPools/guardian-automation/providers/guardian-ci-i'
-  GUARDIAN_WIF_SERVICE_ACCOUNT: 'guardian-automation-bot@ghg-guardian-ci-i-6ad437.iam.gserviceaccount.com'
-
 jobs:
   init:
     runs-on: 'ubuntu-latest'
     outputs:
       directories: '${{ steps.dirs.outputs.directories }}'
     steps:
+      - name: 'Validate Branch'
+        if: |-
+          github.ref != format('refs/heads/{0}', github.event.repository.default_branch)
+        shell: 'bash'
+        run: |-
+          echo "ERROR: Guardian Admin can only be run from the repository default branch."
+          exit 1
+
       - name: 'Checkout'
         uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
 
@@ -74,6 +78,15 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
+
+      # already runs from the default branch, dont need an additional checkout
+      - name: 'Load Env Vars'
+        uses: 'abcxyz/pkg/.github/actions/load-workflow-variables@8698e5b744e805614a686279b9ab9d011ab787df' # ratchet:abcxyz/pkg/.github/actions/load-workflow-variables@main
+        with:
+          working_directory: '${{ matrix.working_directory }}'
+          env_filename: 'env.yml'
+          find_in_parents: true
+          top_level_directory: '${{ github.workspace }}'
 
       - name: 'Mint Token'
         id: 'mint-token'
