--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -36,9 +36,6 @@ concurrency:
 env:
   REPO_OWNER: '${{ github.repository_owner }}'
   REPO_NAME: '${{ github.event.repository.name }}'
-  GUARDIAN_WIF_PROVIDER: 'projects/1098665030124/locations/global/workloadIdentityPools/guardian-automation/providers/guardian-ci-i'
-  GUARDIAN_WIF_SERVICE_ACCOUNT: 'guardian-automation-bot@ghg-guardian-ci-i-6ad437.iam.gserviceaccount.com'
-  GUARDIAN_BUCKET_NAME: 'guardian-ci-i-guardian-state-c79e1f4759'
   PR_NUMBER: '${{ github.event.number }}'
   # GUARDIAN_LOG_MODE: 'development'
   # GUARDIAN_LOG_LEVEL: 'debug'
@@ -77,6 +74,19 @@ jobs:
       matrix:
         working_directory: '${{ fromJSON(needs.init.outputs.directories) }}'
     steps:
+      - name: 'Checkout'
+        uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
+        with:
+          ref: '${{ github.event.repository.default_branch }}'
+
+      - name: 'Load Env Vars'
+        uses: 'abcxyz/pkg/.github/actions/load-workflow-variables@8698e5b744e805614a686279b9ab9d011ab787df' # ratchet:abcxyz/pkg/.github/actions/load-workflow-variables@main
+        with:
+          working_directory: '${{ matrix.working_directory }}'
+          env_filename: 'env.yml'
+          find_in_parents: true
+          top_level_directory: '${{ github.workspace }}'
+
       - name: 'Checkout'
         uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
         with:
