--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -80,12 +80,12 @@ jobs:
           ref: '${{ github.event.repository.default_branch }}'
 
       - name: 'Load Env Vars'
-        uses: 'abcxyz/pkg/.github/actions/load-workflow-variables@8698e5b744e805614a686279b9ab9d011ab787df' # ratchet:abcxyz/pkg/.github/actions/load-workflow-variables@main
+        uses: 'abcxyz/pkg/.github/actions/load-workflow-variables@main' # ratchet:exclude
         with:
           working_directory: '${{ matrix.working_directory }}'
-          env_filename: 'env.yml'
           find_in_parents: true
-          top_level_directory: '${{ github.workspace }}'
+          # env_filename: 'env.yml' # this is the default
+          # top_level_directory: '${{ github.workspace }}' # this is the default
 
       - name: 'Checkout'
         uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
