--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -73,6 +73,7 @@ jobs:
       fail-fast: false
       matrix:
         working_directory: '${{ fromJSON(needs.init.outputs.directories) }}'
+    environment: '${{ matrix.working_directory }}'
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
