--- a/.github/workflows/test-admin.yml
+++ b/.github/workflows/test-admin.yml
@@ -70,14 +70,20 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
+        with:
+          ref: '${{ github.event.repository.default_branch }}'
+          path: 'guardian-main'
+          sparse-checkout: 'guardian.env.yml'
 
-      # already runs from the default branch, dont need an additional checkout
       - name: 'Load Env Vars'
         uses: 'abcxyz/pkg/.github/actions/load-workflow-variables@main' # ratchet:exclude
         with:
           working_directory: '${{ matrix.working_directory }}'
-          filepath: 'guardian.env.yml'
+          filepath: './guardian-main/guardian.env.yml'
           fail_on_missing: true
+
+      - name: 'Checkout'
+        uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
 
       - name: 'Mint Token'
         id: 'mint-token'
