--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -78,12 +78,14 @@ jobs:
         uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
         with:
           ref: '${{ github.event.repository.default_branch }}'
+          path: 'guardian-main'
+          sparse-checkout: 'guardian.env.yml'
 
       - name: 'Load Env Vars'
         uses: 'abcxyz/pkg/.github/actions/load-workflow-variables@main' # ratchet:exclude
         with:
           working_directory: '${{ matrix.working_directory }}'
-          filepath: 'guardian.env.yml'
+          filepath: './guardian-main/guardian.env.yml'
           fail_on_missing: true
 
       - name: 'Checkout'
