--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -91,7 +91,7 @@ jobs:
       - name: 'Checkout'
         uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
         with:
-          ref: '${{ github.event.pull_request.head.ref }}'
+          ref: '${{ github.event.pull_request.head.sha }}'
 
       - name: 'Setup Go'
         uses: 'actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568' # ratchet:actions/setup-go@v3
